--- a/index.html
+++ b/index.html
@@ -1,36 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+<html lang="en" style="font-size: 8px">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png"
+		/>
+		<title>Frontend Mentor | 3-column preview card component</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap"
+			rel="stylesheet"
+		/>
+		<script src="https://cdn.tailwindcss.com"></script>
+		<script>
+			tailwind.config = {
+				theme: {
+					extend: {
+						colors: {
+							"bright-orange": "#e38826",
+							"dark-cyan": "#006970",
+							"very-dark-cyan": "#004241",
+							white: "#ffffff",
+						},
+						fontFamily: {
+							"big-shoulder": "Big Shoulders Display",
+							"lexend-deca": "Lexend Deca",
+						},
+					},
+				},
+			}
+		</script>
+	</head>
+	<body
+		class="flex flex-col justify-center items-center font-lexend-deca p-[3rem] pt-[11rem] md:pt-[21.4rem]"
+		style="font-size: 15px"
+	>
+		<div
+			class="flex flex-col items-stretch justify-center overflow-hidden rounded-[1rem] text-white md:flex-row md:w-[115rem]"
+		>
+			<div
+				class="flex flex-1 flex-col items-start bg-bright-orange p-[6rem]"
+			>
+				<img src="images/icon-sedans.svg" alt="" />
+				<h1
+					class="font-big-shoulder text-[5rem] mt-[3.6rem] opacity-90"
+				>
+					SEDANS
+				</h1>
+				<p class="mt-[2.5rem] leading-[3.1rem] opacity-60">
+					Choose a sedan for its affordability and excellent fuel
+					economy. Ideal for cruising in the city or on your next road
+					trip.
+				</p>
+				<button
+					class="box-border text-bright-orange bg-white py-[1.4rem] px-[3.8rem] rounded-full border-[2px] border-transparent mt-[3.2rem] md:mt-[10.3rem] hover:bg-transparent hover:text-white hover:border-white"
+				>
+					Learn More
+				</button>
+			</div>
+			<div class="flex flex-1 flex-col items-start bg-dark-cyan p-[6rem]">
+				<img src="images/icon-suvs.svg" alt="" />
+				<h1
+					class="font-big-shoulder text-[5rem] mt-[3.6rem] opacity-90"
+				>
+					SUVS
+				</h1>
+				<p class="mt-[2.5rem] leading-[3.1rem] opacity-60">
+					Take an SUV for its spacious interior, power, and
+					versatility. Perfect for your next family vacation and
+					off-road adventures.
+				</p>
+				<button
+					class="box-border text-dark-cyan bg-white py-[1.4rem] px-[3.8rem] rounded-full border-[2px] border-transparent mt-[3.2rem] md:mt-[10.3rem] hover:bg-transparent hover:text-white hover:border-white"
+				>
+					Learn More
+				</button>
+			</div>
+			<div
+				class="flex flex-1 flex-col items-start bg-very-dark-cyan p-[6rem]"
+			>
+				<img src="images/icon-luxury.svg" alt="" />
+				<h1
+					class="font-big-shoulder text-[5rem] mt-[3.6rem] opacity-90"
+				>
+					LUXURY
+				</h1>
+				<p class="mt-[2.5rem] leading-[3.1rem] opacity-60">
+					Cruise in the best car brands without the bloated prices.
+					Enjoy the enhanced comfort of a luxury rental and arrive in
+					style.
+				</p>
+				<button
+					class="box-border text-very-dark-cyan bg-white py-[1.4rem] px-[3.8rem] rounded-full border-[2px] border-transparent mt-[3.2rem] md:mt-[10.3rem] hover:bg-transparent hover:text-white hover:border-white"
+				>
+					Learn More
+				</button>
+			</div>
+		</div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | 3-column preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
-
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+		<!-- <div class="mt-[5rem]">
+			Challenge by
+			<a
+				href="https://www.frontendmentor.io?ref=challenge"
+				target="_blank"
+				class="underline"
+				>Frontend Mentor</a
+			>. Coded by
+			<a href="https://reshaditiya.com" target="_blank" class="underline"
+				>Resha Aditiya</a
+			>.
+		</div> -->
+	</body>
 </html>
