--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</script>
 	</head>
 	<body
-		class="flex flex-col justify-center items-center font-lexend-deca p-[3rem] pt-[11rem] md:pt-[21.4rem]"
+		class="flex flex-col justify-center items-center font-lexend-deca p-[3rem] pt-[11rem] md:h-screen md:pt-[0rem]"
 		style="font-size: 15px"
 	>
 		<div
@@ -107,7 +107,7 @@
 			</div>
 		</div>
 
-		<!-- <div class="mt-[5rem]">
+		<div class="mt-[2rem] opacity-50">
 			Challenge by
 			<a
 				href="https://www.frontendmentor.io?ref=challenge"
@@ -118,6 +118,6 @@
 			<a href="https://reshaditiya.com" target="_blank" class="underline"
 				>Resha Aditiya</a
 			>.
-		</div> -->
+		</div>
 	</body>
 </html>
