--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			</div>
 		</div>
 
-		<div class="mt-[2rem] opacity-50">
+		<div class="mt-[2rem] opacity-50 text-center">
 			Challenge by
 			<a
 				href="https://www.frontendmentor.io?ref=challenge"
