fix no attribution

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 							"dark-cyan": "#006970",
 							"very-dark-cyan": "#004241",
 							white: "#ffffff",
+							gray: "#f2f2f2",
 						},
 						fontFamily: {
 							"big-shoulder": "Big Shoulders Display",
@@ -41,7 +42,7 @@
 		</script>
 	</head>
 	<body
-		class="flex flex-col justify-center items-center font-lexend-deca p-[3rem] pt-[11rem] md:h-screen md:pt-[0rem]"
+		class="flex flex-col justify-center items-center font-lexend-deca p-[3rem] pt-[11rem] bg-gray md:h-screen md:pt-[0rem]"
 		style="font-size: 15px"
 	>
 		<div
@@ -107,7 +108,7 @@
 			</div>
 		</div>
 
-		<div class="mt-[2rem] opacity-50 text-center">
+		<!-- <div class="mt-[2rem] opacity-50 text-center">
 			Challenge by
 			<a
 				href="https://www.frontendmentor.io?ref=challenge"
@@ -118,6 +119,6 @@
 			<a href="https://reshaditiya.com" target="_blank" class="underline"
 				>Resha Aditiya</a
 			>.
-		</div>
+		</div> -->
 	</body>
 </html>
