padding top for view

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</script>
 	</head>
 	<body
-		class="flex flex-col justify-center items-center font-lexend-deca p-[3rem] pt-[11rem] bg-gray md:h-screen md:pt-[0rem]"
+		class="flex flex-col justify-center items-center font-lexend-deca p-[3rem] pt-[11rem] bg-gray md:pt-[21.4rem]"
 		style="font-size: 15px"
 	>
 		<div
