--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</script>
 	</head>
 	<body
-		class="flex flex-col justify-center items-center font-lexend-deca p-[3rem] pt-[11rem] bg-gray md:pt-[21.4rem]"
+		class="flex flex-col justify-center items-center font-lexend-deca p-[3rem] pt-[11rem] bg-gray md:pt-[0rem] md:h-screen"
 		style="font-size: 15px"
 	>
 		<div
@@ -108,7 +108,7 @@
 			</div>
 		</div>
 
-		<!-- <div class="mt-[2rem] opacity-50 text-center">
+		<div class="mt-[2rem] opacity-50 text-center">
 			Challenge by
 			<a
 				href="https://www.frontendmentor.io?ref=challenge"
@@ -119,6 +119,6 @@
 			<a href="https://reshaditiya.com" target="_blank" class="underline"
 				>Resha Aditiya</a
 			>.
-		</div> -->
+		</div>
 	</body>
 </html>
